--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app2",
   "version": "0.1.0",
+  "engines": {"node": "12.16.x", "npm": "6.14.x"},
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
